--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 plotly = "^5.24.1"
 streamlit = "^1.41.1"
+seaborn = "^0.13.2"
+requests = "^2.32.3"
 
 
 [build-system]
